MAWABOT V1.0.0
Open source telegram bot for MAWA Ecosystem.
Coded in Java on Intellij with maven.

Feel free to use or do merge requests to help up get that bot PERFECT!