@@ -1,4 +1,4 @@
-package org.MINDN;
+package org.MAWA;
 
 import com.pengrad.telegrambot.model.request.ParseMode;
 import okhttp3.HttpUrl;
@@ -17,7 +17,6 @@ import com.pengrad.telegrambot.model.Update;
 import com.pengrad.telegrambot.request.GetUpdates;
 import com.pengrad.telegrambot.request.SendMessage;
 import com.pengrad.telegrambot.response.GetUpdatesResponse;
-import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
@@ -30,14 +29,14 @@ public class Main {
     // Create a scheduled executor with 1 thread
     private static final Logger logger = LoggerFactory.getLogger(Main.class);
     private static final ScheduledExecutorService executor = Executors.newScheduledThreadPool(1);
-    private static final String botToken = System.getenv("TELEGRAM_BOT_TOKEN").trim();
+    private static final String botToken = System.getenv("MAWATELEGRAMBOT").trim();
     private static int offset = 0; // Consider loading this from a file or database
     private static final String SCAM_ALERT_MESSAGE = """
                             *PLEASE, KEEP THE FOLLOWING IN MIND WHILE IN OUR ECOSYSTEM!*
                             \s
                             As our community continues to grow, it is important to stay vigilant against potential scams.
                             \s
-                            *MINDBLOWN ECOSYSTEM RULES OF THUMBS*
+                            *MAWA ECOSYSTEM RULES OF THUMBS*
                             \s
                             *1.* Do Not Trust Direct Messages (DMs): Our team will never reach out to you via direct message for personal information, investment opportunities, or any other sensitive matters.
                             \s
@@ -51,7 +50,7 @@ public class Main {
     // create telegram api bot with bot token
     public static void main(String[] args) {
         if (botToken.isEmpty()) {
-            logger.error("TELEGRAM_BOT_TOKEN is not set or is invalid");
+            logger.error("MAWATELEGRAMBOT is not set or is invalid");
             return;
         }
 
@@ -116,9 +115,9 @@ public class Main {
             .readTimeout(Duration.ofSeconds(30))
             .build();
     // channelIds variable and telegram channel list
-    private static final List<Long> channelIds = Arrays.asList(10021634101735763L, 10021634101731L, 1002057091895L);
+    private static final List<Long> channelIds = List.of(1002178930512L);
     // Add the token address here
-    private static final String tokenAddress = "4bEMorkYYDojk98Pk2hRTScvh6HwKgvrikzEcP2dY545";
+    private static final String tokenAddress = "Eu6fXJznfAP3beT6ZzNMdxNa1S83cKdJK9HJaWsmpump";
 
 
 
@@ -147,9 +146,10 @@ public class Main {
             switch (command) {
                 case "/invite" -> {
                     String InviteMessage = """
-                            Here's the first [INVITATIONAL EVENT SEASON 1](https://t.me/subinvitebot/win?startapp=66918cb73c3724d15e5b9f4b)
-                            INVITE EVERYONE IN THE WORLD, SHOW THE WORLD WE'RE MINDBLOWN WITH $MINDN!
-                            [Are you MindBlown yet?](https://t.me/subinvitebot/win?startapp=66918cb73c3724d15e5b9f4b)
+                            [MAWA INVITE LINK](https://t.me/TRUMP2024MAWA)
+                            INVITE EVERYONE IN THE WORLD, SHOW THE WORLD HOW REAL MAWA IS!
+                            \s
+                            [Make America Wealthy Again](https://makeamericawealthyagain.fun)
                             BUILDING THE CORE
                             AND THE BUILDING THE WORLD
                             """;
@@ -158,27 +158,23 @@ public class Main {
 
                 case "/work" -> {
                     String WorkMessage = """
-                            *Get Ready to be MindBlown with $MINDN!*
+                            *Make your money work with MAWA!*
                             \s
-                            *List of commands of @MindBlownBot, please do /worklist*
+                            *List of commands of @MakeAmericaWealthyAgain, please do /worklist*
                             \s
-                            MindBlown Ecosystem website: https://www.mindblown.world
-                            *$MINDN is the upgraded and decentralized version of channel points. You earn by engaging in the community.*
+                            MAWA website: https://makeamericawealthyagain.fun
                             \s
                             *Social Networks*
                             \s
-                            MindBlown Ecosystem | [Join us on Telegram](https://t.me/MindBlownProject)
-                            MindBlown Ecosystem | [Join the chat](https://t.me/MindBlowngraphicsmemes/1)
-                            MindBlown Ecosystem | [Promote and earn](https://t.me/MindBlownCommunity)
-                            MindBlown Ecosystem | [r/ProjectMindBlown](https://www.reddit.com/r/ProjectMindBlown/)
-                            MindBlown Ecosystem | [Join our Discord](https://discord.gg/93XJtRQWkW)
-                            MindBlown Ecosystem | [Follow on X](https://x.com/mindblownsol)
+                            MAWA Ecosystem | [Join us on Telegram](https://t.me/TRUMP2024MAWA)
+                            MAWA Ecosystem | [Join the memes](https://t.me/memeschannelss)
+                            MAWA Ecosystem | [Join us on TruthSocial](https://truthsocial.com/@mawatoken)
+                            MAWA Ecosystem | [Follow us on X](https://x.com/mawa_token)
                             \s
-                            *Market and DEFi*
+                            *DEFi and DEX*
                             \s
-                            Burnt LP Token: [View on Solscan](https://solscan.io/tx/3usMDeJyfFeKBrr6piNKwqMLUCBPqL14TQzeXPTEp5J3fqEWtT9gvxvhK6daES9pCFHHLgwncW4MHbyEabEPLkGZ)
-                            Swap $MINDN on Raydium: [Start swapping](https://raydium.io/swap/?inputMint=sol&outputMint=4bEMorkYYDojk98Pk2hRTScvh6HwKgvrikzEcP2dY545)
-                            CHART [GeckoTerminal](https://www.geckoterminal.com/solana/pools/GXvnPwpJs22Q6YvUr6eA9EJV7Dt23RUH6m7jw9DW8o48)
+                            Get MAWA on Raydium: [Start swapping](https://raydium.io/swap/?outputMint=Eu6fXJznfAP3beT6ZzNMdxNa1S83cKdJK9HJaWsmpump&inputMint=sol)
+                            [MAWA DEXSCREENER](https://dexscreener.com/solana/EH5YmkfkBPaszai4m9cfHEUmzCQ34tgtBUBhUFM4txqN)
                             """;
                     bot.execute(new SendMessage(update.message().chat().id(), WorkMessage).parseMode(ParseMode.Markdown));
                 }
@@ -194,7 +190,7 @@ public class Main {
                             \s
                             As our community continues to grow, it is important to stay vigilant against potential scams.
                             \s
-                            *MINDBLOWN ECOSYSTEM RULES OF THUMBS*
+                            *MAWA ECOSYSTEM RULES OF THUMBS*
                             \s
                             *1.* Do Not Trust Direct Messages (DMs): Our team will never reach out to you via direct message for personal information, investment opportunities, or any other sensitive matters.
                             \s
@@ -207,49 +203,18 @@ public class Main {
                     bot.execute(new SendMessage(update.message().chat().id(), ScamMessage).parseMode(ParseMode.Markdown));
                 }
 
-                case "/21bits" -> {
-                    String url = "https://www.21bits.io/code=Seitan1";
-                    bot.execute(new SendMessage(update.message().chat().id(), "Enter my 21Bits referrals and you will earn from my winnings! 21Bits will give you a 100% Deposit Bonus USE CODE SEITAN1 " + url));
-                }
-
-                case "/gamingbets" -> {
-                    String url = "https://gamingbets.com";
-                    bot.execute(new SendMessage(update.message().chat().id(), "Code: SEITANONKICK | 100% Deposit Match Bonus + 100 FREE Spins on BetSoft | Min. $15 Deposit " + url));
-                }
-
-                case "/winspirit" -> {
-                    String url = "https://pokiesgamer.com/seitan?utm_campaign=1";
-                    bot.execute(new SendMessage(update.message().chat().id(), "Use my link, then deposit a minimum of $20 and play it 3x wager, send me proof in dm and receive $10 in your Solana wallet! " + url));
-                }
-
-                case "/mindblowenergy" -> {
-                    String url = "https://www.mindblowenergy.com";
-                    bot.execute(new SendMessage(update.message().chat().id(), "Amazon.ca #1 Nootropics supplement and energy drink! " + url));
-                }
-
-                case "/fndamentals" -> {
-                    String url = "https://fndamentals.ca";
-                    bot.execute(new SendMessage(update.message().chat().id(), "Canadian Premium Apparel. Get your FNDAMENTALS! " + url));
-                }
-
-                case "/airramedia" -> {
-                    String url = "https://airramedia.ca";
-                    bot.execute(new SendMessage(update.message().chat().id(), "Canadian production company " + url));
-                }
-
-
                 case "/inject" -> {
                     String InjectionMessage = """
-                            *Inject your own Liquidity Pool in the MindBlown Ecosystem!*
+                            *Inject your own Liquidity Pool in the MAWA Ecosystem!*
                             \s
                             [Raydium docs for liquidity providers](https://docs.raydium.io/raydium/pool-creation/creating-a-constant-product-pool)
-                            *This is recommended for MindBlown that are used to Staking, know how liquidity pools work and are ready to burn their LP tokens.*
+                            *This is recommended for MAWA that are used to Staking, know how liquidity pools work and are ready to burn their LP tokens.*
                             \s
                             🌐 Steps to create a new pool 🌐
                             \s
                             *1.*
                             Create a new pool on [Raydium](https://raydium.io/pools)
-                            Add your Solana coins in your liquidity pool. ($SOL / $MINDN -> SWAP)
+                            Add your Solana coins in your liquidity pool. ($SOL / MAWA -> SWAP)
                             *Raydium will provide you with one LP Token. This LP Token is like an NFT, it's unique to you and your pool.*
                             \s
                             *2.*
@@ -261,47 +226,41 @@ public class Main {
                             \s
                             *3.*
                             You could improve the ecosystem by creating an ecosystem farm.
-                            It's like providing $SOL and $MINDN rewards to the community for using your pool.
+                            It's like providing $SOL and MAWA rewards to the community for using your pool.
                             [Here's a detailed and official guide on how all of this works](https://docs.raydium.io/raydium/pool-creation/creating-a-constant-product-pool/creating-an-ecosystem-farm)
                             \s
-                            *Here's some further proof that MINDN is fully decentralized:*
-                            \s
-                            [MetaData, Rights revoked, LP Token Burnt.](https://explorer.solana.com/tx/56uAnmRdD7JqxH73ZcbhZp1S76dJ7zXDHEVm5ZZgFd1HX6p4ggVxZryBySmjgyJoFMgmqWeKRUBTmfnSWe7jQEoJ/inspect)
-                            [Scan $MINDN on the Solana BlockChain](https://solscan.io/token/4bEMorkYYDojk98Pk2hRTScvh6HwKgvrikzEcP2dY545#metadata)
-                            \s
-                            I can provide any proof you need, just ask me @SeitanSurKick
-                            \s
+                            [Scan MAWA](https://solscan.io/token/4bEMorkYYDojk98Pk2hRTScvh6HwKgvrikzEcP2dY545#metadata)
                             """;
                     bot.execute(new SendMessage(update.message().chat().id(), InjectionMessage).parseMode(ParseMode.Markdown));
 
                 }
                 case "/ca" -> {
-                    String ca = "4bEMorkYYDojk98Pk2hRTScvh6HwKgvrikzEcP2dY545";
+                    String ca = "Eu6fXJznfAP3beT6ZzNMdxNa1S83cKdJK9HJaWsmpump";
                     bot.execute(new SendMessage(update.message().chat().id(), ca));
                 }
 
                 case "/twitter" -> {
-                    String ca = "https://x.com/mindblownsol";
+                    String ca = "https://x.com/mawa_token";
                     bot.execute(new SendMessage(update.message().chat().id(), ca));
                 }
 
                 case "/chart" -> {
-                    String ca = "https://www.geckoterminal.com/solana/pools/GXvnPwpJs22Q6YvUr6eA9EJV7Dt23RUH6m7jw9DW8o48";
+                    String ca = "https://dexscreener.com/solana/EH5YmkfkBPaszai4m9cfHEUmzCQ34tgtBUBhUFM4txqN";
                     bot.execute(new SendMessage(update.message().chat().id(), ca));
                 }
 
                 case "/raydium" -> {
-                    String url = "https://raydium.io/swap/?inputMint=sol&outputMint=4bEMorkYYDojk98Pk2hRTScvh6HwKgvrikzEcP2dY545";
+                    String url = "https://raydium.io/swap/?outputMint=Eu6fXJznfAP3beT6ZzNMdxNa1S83cKdJK9HJaWsmpump&inputMint=sol";
                     bot.execute(new SendMessage(update.message().chat().id(), "You can buy $MINDN on Raydium: " + url));
                 }
 
                 case "/buy" -> {
-                    String url = "https://raydium.io/swap/?inputMint=sol&outputMint=4bEMorkYYDojk98Pk2hRTScvh6HwKgvrikzEcP2dY545";
+                    String url = "https://raydium.io/swap/?outputMint=Eu6fXJznfAP3beT6ZzNMdxNa1S83cKdJK9HJaWsmpump&inputMint=sol";
                     bot.execute(new SendMessage(update.message().chat().id(), "You can buy $MINDN: " + url));
                 }
 
                 case "/jupiter" -> {
-                    String url = "https://jup.ag/swap/SOL-4bEMorkYYDojk98Pk2hRTScvh6HwKgvrikzEcP2dY545";
+                    String url = "https://jup.ag/swap/SOL-Eu6fXJznfAP3beT6ZzNMdxNa1S83cKdJK9HJaWsmpump";
                     bot.execute(new SendMessage(update.message().chat().id(), "You can buy $MINDN on Jupiter: " + url));
                 }
 
@@ -309,14 +268,11 @@ public class Main {
                     String WorkListMessage = """
                             *\uD83C\uDF1F Here's the full list of commands I can do! \uD83C\uDF1F*
                             \s
-                            *\uD83C\uDF10 MindBlown default commands*
-                            /work, /worklist, /invite, /buy, /raydium, /jupiter, /twitter
+                            *\uD83C\uDF10 MAWA default commands*
+                            /work, /worklist, /invite, /buy, /jupiter, /twitter
                             \s
-                            *\uD83C\uDF10 MindBlown Ecosystem commands*
+                            *\uD83C\uDF10 MAWA Ecosystem commands*
                             /scam, /chart, /ca, /price, /inject
-                            \s
-                            *\uD83C\uDF10 MindBlown partners*
-                            /mindblowenergy, /fndamentals, /airramedia, /gamingbets, /21bits, /winspirit
                             """;
                     bot.execute(new SendMessage(update.message().chat().id(), WorkListMessage).parseMode(ParseMode.Markdown));
                 }
